--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
     <h1> <a href="practicePlace.html">Practice Place</a></h1>
     <nav>
       <ul>
-        <li><a href="fqa.html">FAQ</a></li>
-        <li><a href="band.html">Band</a></li>
-        <li><a href="provider.html">Provider</a></li>
+        <li><a href="search.html">Provider</a></li>
       </ul>
     </nav>
   </body>
