fixed button spelling

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <iframe width="1280" height="720" src="https://www.youtube.com/embed/IlwLNJxije0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
     <section>
-    <buttin> <a href="search.html">Find now!</a></buttin>
+    <button> <a href="search.html">Find now!</a></button>g
     </section>
   </body>
   <footer><a href="FAQ.html">FAQ</a></h1>
