had to update to edit the index.html tag so the link is correct

--- a/public/search.html
+++ b/public/search.html
@@ -6,7 +6,7 @@
   </Head>
   <body>
     <header id="search_header">
-      <h1><a href="practicePlace.html">Practice Place</a></h1>
+      <h1><a href="index.html">Practice Place</a></h1>
       <h2>Search Page</h2>
       <nav>
         <ul>
