updated h4 on footer

--- a/public/results.html
+++ b/public/results.html
@@ -20,7 +20,7 @@
         <h3>Visuals</h3>
         <div id="images"></div>
       </section>
-   <footer><a href="FAQ.html">FAQ</a></h1></footer>
+   <footer><h4><a href="FAQ.html">FAQ</a></h4></footer>
   </body>
 </html>
 
