got rid of roque h1 tag in footer and changed to a h4

--- a/public/search.html
+++ b/public/search.html
@@ -16,7 +16,7 @@
         <input type="submit" value="search"/>
       </form>
     </section>
-    <footer><a href="FAQ.html">FAQ</a></h1></footer>
+    <footer><h4><a href="FAQ.html">FAQ</a></h4></footer>
   </body>
   </head>
 </html>
