--- a/public/results.html
+++ b/public/results.html
@@ -3,12 +3,13 @@
   <head><title>Practice Place</title></head>
   <body>
      <header id="results_header">
-      <h1><a href="practicePlace.html">Practice Place</a></h1>
+      <h1><a href="index.html">Practice Place</a></h1>
       <h2>Results Page</h2>
      </header>
       <section id="Container">
         <h3>Places</h3>
         <div class="results"</div>
+        <button id="search" href="search.html" type="submit">Search Again</button>
       </section>
       <section id="Container">
         <h3>Hours, Costs, Power, Size</h3>
