made grid, reset and add jquery

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <title> Practice Place </title>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+      <link rel='stylesheet' type='text/css' href='grid.css'>
+      <link rel='stylesheet' type='text/css' href='style.css'>
+      <link rel='stylesheet' type='text/css' href='reset.css'>
   </Head>
   <header>
     <h1><a href="index.html">Practice Place</a></h1>
@@ -17,4 +21,5 @@
   <footer><a href="FAQ.html">FAQ</a></h1>
   </footer>
   <script src=''></script>
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 </html>
