basic style and grid layout

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src='app.js'></script>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <title> Practice Place </title>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
-      <link rel='stylesheet' type='text/css' href='grid.css'>
-      <link rel='stylesheet' type='text/css' href='style.css'>
-      <link rel='stylesheet' type='text/css' href='reset.css'>
-  </Head>
-  <header>
-    <h1><a href="index.html">Practice Place</a></h1>
-    <h2>Slogan Place Holder</h2>
-  </header>
+    <link rel='stylesheet' type='text/css' href='reset.css'>
+    <link rel='stylesheet' type='text/css' href='grid.css'>
+    <link rel='stylesheet' type='text/css' href='style.css'>
+  </head>
   <body>
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/bWgJzjNiKnk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-    <section>
-    <button> <a href="search.html">Find now!</a></button>
-    </section>
+    <header class='container_12'>
+       <h2 class='grid_6'>Welcome</h2>
+      <h1 class='grid_6'><a href="index.html">Practice Place</a></h1>
+    </header>
+    <main class='container_12'>
+      <section>
+      <iframe width="960" height="540" src="https://www.youtube.com/embed/bWgJzjNiKnk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      </section>
+      <section class='container_12' >
+        <article><a href="search.html">Find now!</a></article>
+      </section>
+    </main>
+    <footer class='container_12'><a class='grid_12' href="FAQ.html">FAQ</a></h1>
+    </footer>
   </body>
-  <footer><a href="FAQ.html">FAQ</a></h1>
-  </footer>
-  <script src=''></script>
-  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 </html>
