--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> Practice Place </title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
       <link rel='stylesheet' type='text/css' href='grid.css'>
@@ -20,6 +21,5 @@
   </body>
   <footer><a href="FAQ.html">FAQ</a></h1>
   </footer>
-  <script src=''></script>
-  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src='app.js'></script>
 </html>
