--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src='app.js'></script>
     <title> Practice Place </title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' type='text/css' href='reset.css'>
@@ -12,16 +12,16 @@
   </head>
   <body>
     <header class='container_12'>
-       <h2 class='grid_6'>Welcome</h2>
+      <h2 class='grid_6'>Welcome</h2>
       <h1 class='grid_6'><a href="index.html">Practice Place</a></h1>
     </header>
     <main class='container_12'>
       <section>
       <iframe width="960" height="540" src="https://www.youtube.com/embed/bWgJzjNiKnk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       </section>
-      <section class='container_12' >
-        <article><a href="search.html">Find now!</a></article>
-      </section>
+      <form class='grid_12'action="search.html">
+        <input type="submit" value="Search Now!">
+      </form>
     </main>
     <footer class='container_12'><a class='grid_12' href="FAQ.html">FAQ</a></h1>
     </footer>
