--- a/public/results.html
+++ b/public/results.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Practice Place</title></head>
+  <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src='app2.js'></script>
+    <title>Practice Place</title>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' type='text/css' href='reset.css'>
+    <link rel='stylesheet' type='text/css' href='grid.css'>
+    <link rel='stylesheet' type='text/css' href='style.css'>
+  </head>
   <body>
-     <header id="results_header">
-      <h1><a href="index.html">Practice Place</a></h1>
-      <h2>Results Page</h2>
+     <header class='container_12' id="results_header">
+      <h2 class='grid_6'>Results Page</h2>
+      <h1 class='grid_6'><a href="index.html">Practice Place</a></h1>
      </header>
+     <main>
       <section id="Container">
         <h3>Places</h3>
-        <div class="results"</div>
-        <button id="search" href="search.html" type="submit">Search Again</button>
+        <div class="results"/>
       </section>
       <section id="Container">
         <h3>Hours, Costs, Power, Size</h3>
@@ -21,7 +29,11 @@
         <h3>Visuals</h3>
         <div id="images"></div>
       </section>
-   <footer><h4><a href="FAQ.html">FAQ</a></h4></footer>
+      <form action="search.html">
+        <input type="submit" value="Search Again">
+      </form>
+    </main>
+   <footer class='container_12'><h4><a href="FAQ.html">FAQ</a></h4></footer>
   </body>
 </html>
 
