Make final video and final headers/fooders

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src='app.js'></script>
     <title> Practice Place </title>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' type='text/css' href='reset.css'>
+    <link rel='stylesheet' type='text/css' href='grid.css'>
+    <link rel='stylesheet' type='text/css' href='style.css'>
   </Head>
-  <header>
-    <h1><a href="index.html">Practice Place</a></h1>
-    <h2>Frequently Asked Question</h2>
+  <header class='container_12 page_header'>
+    <h2 class='grid_6 home_child2'>Frequently Asked Question</h2>
+    <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
   </header>
   <body>
-    <p> Our Mission is to provide safe, affordable, and musically focused practice spaces withing your local neighborhood</p>
-    <ul>
-      <li> Question: How do I rent a room?</li>
-      <li>Answer: Email the owner via the contact informaiton provided in the detials.</li>
-    </ul>
-    <ul>
-      <li>Question: What do the rooms look it?</li>
-      <li>Answer: The very last column of detials will display images</li>
-    </ul>
+    <p> Our Mission is to provide safe affordable and musically focused practice spaces within your local neighborhood</p>
+    <span>
+      <ul>
+        <li> Question: How do I rent a room?</li>
+        <li>Answer: Email the owner via the contact informaiton provided in the detials.</li>
+      </ul>
+      <ul>
+        <li>Question: What do the rooms look it?</li>
+        <li>Answer: The very last column of detials will display images</li>
+      </ul>
+    </span>
+    <footer class='container_12 page_footer grid_12'><h4><a href="FAQ.html">FAQ</a></h4></footer>
   </body>
-  <footer><h4><a href="FAQ.html">FAQ</a></h4>
-  </footer>
-  <script src=''></script>
 </html>
