--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,18 @@
     <link rel='stylesheet' type='text/css' href='style.css'>
   </head>
   <body>
-    <header class='container_12'>
-      <h2 class='grid_6'>Welcome</h2>
-      <h1 class='grid_6'><a href="index.html">Practice Place</a></h1>
+    <header class='container_12 page_header'>
+      <h2 class='grid_6 home_child2'>Welcome</h2>
+      <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
     </header>
     <main class='container_12'>
-      <section>
-      <iframe width="960" height="540" src="https://www.youtube.com/embed/bWgJzjNiKnk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-      </section>
+      <section class="grid_12">
+        <iframe width="960" height="540" src="https://www.youtube.com/embed/xLiCd1ff53g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       <form class='grid_12'action="search.html">
         <input type="submit" value="Search Now!">
       </form>
     </main>
-    <footer class='container_12'><a class='grid_12' href="FAQ.html">FAQ</a></h1>
+    <footer class='container_12 page_footer'><a class='grid_12' href="FAQ.html">FAQ</a></h1>
     </footer>
   </body>
 </html>
