--- a/public/search.html
+++ b/public/search.html
@@ -12,9 +12,9 @@
     <link rel='stylesheet' type='text/css' href='style.css'>
   </head>
   <body>
-    <header id="search_header">
-      <h1><a href="index.html">Practice Place</a></h1>
-      <h2>Search Page</h2>
+    <header class='container_12 page_header' id="search_header">
+      <h2 class='grid_6 home_child2'>Search Page</h2>
+      <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
     </header>
     <section class="search_bar">
       <p>Search available practice spaces by location:</p>
@@ -23,7 +23,6 @@
         <input type="submit" value="search"/>
       </form>
     </section>
-    <footer><h4><a href="FAQ.html">FAQ</a></h4></footer>
+    <footer class='container_12 page_footer grid_12'><h4><a href="FAQ.html">FAQ</a></h4></footer>
   </body>
-  </head>
 </html>
