--- a/public/results.html
+++ b/public/results.html
@@ -10,9 +10,9 @@
     <link rel='stylesheet' type='text/css' href='style.css'>
   </head>
   <body>
-     <header class='container_12' id="results_header">
-      <h2 class='grid_6'>Results Page</h2>
-      <h1 class='grid_6'><a href="index.html">Practice Place</a></h1>
+     <header class='container_12 page_header' id="results_header">
+      <h2 class='grid_6 home_child2'>Results Page</h2>
+      <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
      </header>
      <main>
       <section id="Container">
@@ -33,7 +33,7 @@
         <input type="submit" value="Search Again">
       </form>
     </main>
-   <footer class='container_12'><h4><a href="FAQ.html">FAQ</a></h4></footer>
+   <footer class='container_12 page_footer grid_12'><h4><a href="FAQ.html">FAQ</a></h4></footer>
   </body>
 </html>
 
