--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src='app2.js'></script>
     <title> Practice Place </title>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
