--- a/public/search.html
+++ b/public/search.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title> Practice Place </title>
+    <script src="https://cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript"></script>
-    <script src='app.js'></script>
+    <script src='app2.js'></script>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' type='text/css' href='reset.css'>
