linked search page to results

--- a/public/search.html
+++ b/public/search.html
@@ -18,7 +18,7 @@
     </header>
     <section class="search_bar">
       <p>Search available practice spaces by location:</p>
-      <form action= "SEARCH_PROCESSER.js"</form>
+      <form action= "results.html"</form>
         <input id="user"type="text" name="search" placeholder="Enter Location"/>
         <input type="submit" value="search"/>
       </form>
