add display function

--- a/public/search.html
+++ b/public/search.html
@@ -20,17 +20,17 @@
     <section class="search_bar">
       <p>Search available practice spaces by location:
       <form action="results.html">
-        <input  id="user" type="text" placeholder="Enter Location"/>
-        <button class='grid_12'type = "button" id = "submit"> Search</button>
+        <input  id="user" type="text" placeholder="Enter Zip"/>
+        <button class='grid_12' type ="button" id="submit"> Search</button>
       </form>
-    <div id='resultsDisplay1'></div>
-    <div id='resultsDisplay2'></div>
-    <div id='resultsDisplay3'></div>
-    <div id='resultsDisplay4'></div>
-    <div id='resultsDisplay5'></div>
-    <div id='resultsDisplay6'></div>
-    <div id='resultsDisplay7'></div>
-    <div id='resultsDisplay8'></div>
+    <article id='resultsDisplay1'></article>
+    <article id='resultsDisplay2'></article>
+    <article id='resultsDisplay3'></article>
+    <article id='resultsDisplay4'></article>
+    <article id='resultsDisplay5'></article>
+    <article id='resultsDisplay6'></article>
+    <article id='resultsDisplay7'></article>
+    <article id='resultsDisplay8'></article>
     </p>
     </section>
     <footer class='container_12 page_footer grid_12'><h4><a href="FAQ.html">FAQ</a></h4></footer>
