--- a/public/results.html
+++ b/public/results.html
@@ -3,6 +3,7 @@
   <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src='app2.js'></script>
+    <script src='results.js'></script>
     <title>Practice Place</title>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' type='text/css' href='reset.css'>
