added skeleton design css to revamp for mobile

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -8,7 +8,7 @@
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' type='text/css' href='reset.css'>
-    <link rel='stylesheet' type='text/css' href='grid.css'>
+    <link rel='stylesheet' type='text/css' href='skeleton.css'>
     <link rel='stylesheet' type='text/css' href='style.css'>
   </Head>
   <header class='container_12 page_header'>
