--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,28 @@
   <head>
     <script src="https://cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<<<<<<< HEAD
-    <script src='app.js'></script>
-    <script src='results.js'></script>
-=======
     <script src='app2.js'></script>
->>>>>>> 8be874a621a39ce5cd0d0a9036def572e87dd45d
     <title> Practice Place </title>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' type='text/css' href='reset.css'>
-    <link rel='stylesheet' type='text/css' href='grid.css'>
     <link rel='stylesheet' type='text/css' href='style.css'>
+    <link rel='stylesheet' type='text/css' href='skeleton.css'>
   </head>
-  <body>
-    <header class='container_12 page_header'>
-      <h2 class='grid_6 home_child2'>Welcome</h2>
-      <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
+
+  <body class= 'container' >
+    <header class= 'row '>
+       <h1 class = 'six.column'><a href="index.html">Practice Place</a></h1>
+       <h2 class = 'six.column'>Welcome</h2>
     </header>
-    <main class='container_12'>
-      <section class="grid_12">
-        <iframe width="960" height="540" src="https://www.youtube.com/embed/xLiCd1ff53g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-      <form class='grid_12' action="search.html">
+    <section = "embed">
+      <iframe width="960" height="540" src="https://www.youtube.com/embed/xLiCd1ff53g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+    </section>
+    <form class='grid_12' action="search.html">
         <input type="submit" value="Search Now!">
       </form>
     </main>
-    <footer class='container_12 page_footer'><a class='grid_12' href="FAQ.html">FAQ</a></h1>
+    <footer class='container_12 page_footer'><a class='grid_12' href="FAQ.html">FAQ</a>
     </footer>
   </body>
 </html>
