--- a/public/search.html
+++ b/public/search.html
@@ -8,20 +8,20 @@
     <script type="text/javascript"></script>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' type='text/css' href='reset.css'>
-    <link rel='stylesheet' type='text/css' href='grid.css'>
+   <link rel='stylesheet' type='text/css' href='reset.css'>
     <link rel='stylesheet' type='text/css' href='style.css'>
+    <link rel='stylesheet' type='text/css' href='skeleton.css'>
   </head>
-  <body>
-    <header class='container_12 page_header' id="search_header">
-      <h2 class='grid_6 home_child2'>Search Page</h2>
-      <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
+  <body class='container'>
+    <header class='row' id="search_header">
+      <h2 class='six.column'>Search Page</h2>
+      <h1 class='six.column'><a href="index.html">Practice Place</a></h1>
     </header>
     <section class="search_bar">
       <p>Search available practice spaces by location:
       <form action="results.html">
         <input  id="user" type="text" placeholder="Enter Zip"/>
-        <button class='grid_12' type ="button" id="submit"> Search</button>
+        <button class='' type ="button" id="submit"> Search</button>
       </form>
     <article id='resultsDisplay1'></article>
     <article id='resultsDisplay2'></article>
@@ -33,6 +33,6 @@
     <article id='resultsDisplay8'></article>
     </p>
     </section>
-    <footer class='container_12 page_footer grid_12'><h4><a href="FAQ.html">FAQ</a></h4></footer>
+    <footer class=''><h4><a href="FAQ.html">FAQ</a></h4></footer>
   </body>
 </html>
