added embedded video to rescale for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,21 @@
        <h1 class = 'six.column'><a href="index.html">Practice Place</a></h1>
        <h2 class = 'six.column'>Welcome</h2>
     </header>
-    <section = "embed">
-      <iframe width="960" height="540" src="https://www.youtube.com/embed/xLiCd1ff53g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      <section class = 'container'>
+        <article class = 'twelve.column'>
+          <div class = 'embed-container'>
+            <iframe src="https://www.youtube.com/embed/xLiCd1ff53g" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </article>
+      </section>
+    <section class= 'container'>
+      <form class='twelve.column' action="search.html">
+          <input type="submit" value="Search Now!">
+        </form>
     </section>
-    <form class='grid_12' action="search.html">
-        <input type="submit" value="Search Now!">
-      </form>
     </main>
-    <footer class='container_12 page_footer'><a class='grid_12' href="FAQ.html">FAQ</a>
+    <footer class='row'>
+      <a class='2.column' href="FAQ.html">FAQ</a>
     </footer>
   </body>
 </html>
