--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </section>
     </main>
     <footer class='row'>
-      <a class='2.column' href="FAQ.html">FAQ</a>
+      <a class='two.column' href="FAQ.html">FAQ</a>
     </footer>
   </body>
 </html>
