--- a/public/search.html
+++ b/public/search.html
@@ -17,20 +17,24 @@
       <h2 class='six.column'>Search Page</h2>
       <h1 class='six.column'><a href="index.html">Practice Place</a></h1>
     </header>
-    <section class="search_bar">
-      <p>Search available practice spaces by location:
-      <form action="results.html">
-        <input  id="user" type="text" placeholder="Enter Zip"/>
-        <button class='' type ="button" id="submit"> Search</button>
-      </form>
-    <article id='resultsDisplay1'></article>
-    <article id='resultsDisplay2'></article>
-    <article id='resultsDisplay3'></article>
-    <article id='resultsDisplay4'></article>
-    <article id='resultsDisplay5'></article>
-    <article id='resultsDisplay6'></article>
-    <article id='resultsDisplay7'></article>
-    <article id='resultsDisplay8'></article>
+    <section class="container">
+      <article class="row">
+        <p>Search available practice spaces by location:</p>
+        <form action="results.html">
+          <input  id="user" type="text" placeholder="Enter Zip"/>
+          <button class='' type ="button" id="submit">Search</button>
+        </form>
+      </article>
+    </section>
+    <section='container'>
+      <article id='resultsDisplay1'></article>
+      <article id='resultsDisplay2'></article>
+      <article id='resultsDisplay3'></article>
+      <article id='resultsDisplay4'></article>
+      <article id='resultsDisplay5'></article>
+      <article id='resultsDisplay6'></article>
+      <article id='resultsDisplay7'></article>
+      <article id='resultsDisplay8'></article>
     </p>
     </section>
     <footer class=''><h4><a href="FAQ.html">FAQ</a></h4></footer>
