added logo, removed h2 and h1, left padding to center logo

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <script src="https://cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src='app2.js'></script>
-    <title> Practice Place </title>
+    <title>Practice Place</title>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' type='text/css' href='reset.css'>
@@ -14,8 +14,9 @@
 
   <body class= 'container' >
     <header class= 'row '>
-       <h1 class = 'six.column'><a href="index.html">Practice Place</a></h1>
-       <h2 class = 'six.column'>Welcome</h2>
+      <div class='twelve.column'>
+       <img class='small'src="http://i.imgur.com/AbMXvtB.png"></img>
+      <div>
     </header>
     <section = "embed">
       <iframe width="960" height="540" src="https://www.youtube.com/embed/xLiCd1ff53g?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
