--- a/public/search.html
+++ b/public/search.html
@@ -30,7 +30,7 @@
     <article id='resultsDisplay4'></article>
     <article id='resultsDisplay5'></article>
     <article id='resultsDisplay6'></article>
-    <p> <img class='medium' scr="" id="picDisplay"></p>
+    <p> <img class='medium' src="blank.gif" id="picDisplay"></p>
     </p>
     </section>
     <footer class=''><h4><a href="FAQ.html">FAQ</a></h4></footer>
