added jquery fucntionality for faq page

--- a/public/search.html
+++ b/public/search.html
@@ -45,7 +45,7 @@
       </div>
       <div class='four columns' id='imgRe'>
         <p>Space Image</p>
-        <img class='medium' scr="" id="picDisplay">
+        <img class='medium' src="blank.gif" id="picDisplay">
       </div>
     </section>
     <footer class='row'>
