--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src='app.js'></script>
+    <script src='app2.js'></script>
+    <script src='app3.js'></script>
     <script src='results.js'></script>
     <title> Practice Place </title>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
@@ -10,23 +13,32 @@
     <link rel='stylesheet' type='text/css' href='reset.css'>
     <link rel='stylesheet' type='text/css' href='skeleton.css'>
     <link rel='stylesheet' type='text/css' href='style.css'>
-  </Head>
-  <header class='container_12 page_header'>
-    <h2 class='grid_6 home_child2'>Frequently Asked Question</h2>
-    <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
-  </header>
+  </head>
   <body>
-    <p> Our Mission is to provide safe affordable and musically focused practice spaces within your local neighborhood</p>
-    <span>
-      <ul>
-        <li> Question: How do I rent a room?</li>
-        <li>Answer: Email the owner via the contact informaiton provided in the detials.</li>
-      </ul>
-      <ul>
-        <li>Question: What do the rooms look it?</li>
-        <li>Answer: The very last column of detials will display images</li>
-      </ul>
-    </span>
-    <footer class='container_12 page_footer grid_12'><h4><a href="FAQ.html">FAQ</a></h4></footer>
+    <header class='container_12 page_header'>
+      <h2 class='grid_6 home_child2'>Frequently Asked Question</h2>
+      <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
+    </header>
+      <h3>About</h3>
+     <p class='faq'>
+       Seattle has a rich music scene, with many amazingly talented artist. However we do not have equally amazing practice spaces. They are limited, inconveniently located and most of all they all are expensive. But a practice space is no more than just a room a, which is why we, team pp, created practice place. A website that offers affordable practice rooms that come in the form of everyday individual living spaces. After numerous quality checks and safety inspections, team PP, has assembled a handful of practice spaces and owners that would be happy to offer their space, for while they are away for the day. All for just a minimal fee. Find a space near you with our search engine and get jammin! </p>
+     <h5>Have a few more questions? Look below!</h5>
+    <ul id='questions1'>
+      <a class='list' href='#'>How do I reach an owner?</a>
+    </ul>
+     <li class='liList'id='answers1'>Contact info is provided in the search results. Just send a "Hello!" to the email and get the music on its way! </li>
+     <ul id='questions2'>
+      <a class='list' href='#'>How much does it cost?</a>
+    </ul>
+     <li class='liList'id='answers2'>Each space is different, the exact amount is provide in the details, which is determined by location, size, and math.</li>
+     <ul id='questions3'>
+      <a class='list'href='#'>What other spaces will be available in the future.</a>
+    </ul>
+     <li class='liList' id='answers3'>Top Pot</li>
+      <footer class='container_12 page_footer grid_12'>
+        <h4>
+          <a href="FAQ.html">FAQ</a>
+        </h4>
+      </footer>
   </body>
 </html>
