--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,10 @@
     <link rel='stylesheet' type='text/css' href='skeleton.css'>
   </head>
   <body class= 'container' >
-    <header class= 'row '>
-      <div class='twelve.column'>
-       <img class='small'src="http://i.imgur.com/AbMXvtB.png"><a href="index.html"></img>
+    <header class= 'row'>
+      <div class='six columns'>
+       <img class='small'src="http://i.imgur.com/AbMXvtB.png">
+      </div>
       </div>
     </header>
       <section class ='container'>
