aligned text added last minute styling before presentation

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -14,12 +14,16 @@
     <link rel='stylesheet' type='text/css' href='skeleton.css'>
     <link rel='stylesheet' type='text/css' href='style.css'>
   </head>
-  <body>
-    <header class='container_12 page_header'>
-      <h2 class='grid_6 home_child2'>Frequently Asked Question</h2>
-      <h1 class='grid_6 home_child1'><a href="index.html">Practice Place</a></h1>
+
+  <body class='container'>
+    <header class= 'row'>
+      <div class='six columns'>
+         <a href="index.html">
+          <img class='small'src="http://i.imgur.com/AbMXvtB.png">
+         </a>
+      </div>
     </header>
-      <h3>About</h3>
+    <h3>About</h3>
      <p class='faq'>
        Seattle has a rich music scene, with many amazingly talented artist. However we do not have equally amazing practice spaces. They are limited, inconveniently located and most of all they all are expensive. But a practice space is no more than just a room a, which is why we, team pp, created practice place. A website that offers affordable practice rooms that come in the form of everyday individual living spaces. After numerous quality checks and safety inspections, team PP, has assembled a handful of practice spaces and owners that would be happy to offer their space, for while they are away for the day. All for just a minimal fee. Find a space near you with our search engine and get jammin! </p>
      <h5>Have a few more questions? Look below!</h5>
@@ -32,13 +36,11 @@
     </ul>
      <li class='liList'id='answers2'>Each space is different, the exact amount is provide in the details, which is determined by location, size, and math.</li>
      <ul id='questions3'>
-      <a class='list'href='#'>What other spaces will be available in the future.</a>
+      <a class='list'href='#'>What other spaces will be available in the future?</a>
     </ul>
      <li class='liList' id='answers3'>Top Pot</li>
-      <footer class='container_12 page_footer grid_12'>
-        <h4>
-          <a href="FAQ.html">FAQ</a>
-        </h4>
-      </footer>
+    <footer class='row'>
+      <a class='two.column' href="FAQ.html">FAQ</a>
+    </footer>
   </body>
 </html>
