--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,12 @@
     <link rel='stylesheet' type='text/css' href='style.css'>
     <link rel='stylesheet' type='text/css' href='skeleton.css'>
   </head>
-  <body class= 'container' >
+  <body class='container' >
     <header class= 'row'>
       <div class='six columns'>
-       <img class='small'src="http://i.imgur.com/AbMXvtB.png">
-      </div>
+       <a href="index.html">
+        <img class='small'src="http://i.imgur.com/AbMXvtB.png">
+       </a>
       </div>
     </header>
       <section class ='container'>
