--- a/public/search.html
+++ b/public/search.html
@@ -15,14 +15,17 @@
 
   </head>
   <body class='container'>
-    <header class='row'>
-      <h2 class='six.column'>Search Page</h2>
-      <h1 class='six.column'><a href="index.html">Practice Place</a></h1>
+    <header class= 'row'>
+      <div class='six columns'>
+        <a href="index.html">
+          <img class='small'src="http://i.imgur.com/AbMXvtB.png">
+        </a>
+      </div>
     </header>
     <section class="container">
       <article class="row">
         <p id="searchBar">Search available practice spaces by zip code:</p>
-        <form action="results.html">
+        <form>
           <input  id="user" type="text" placeholder="Enter Zip"/>
           <button class='' type ="button" id="submit">Search</button>
         </form>
@@ -44,7 +47,7 @@
         </ul>
       </div>
       <div class='four columns' id='imgRe'>
-        <p>Space Image</p>
+        <p>Photo</p>
         <img class='medium' src="blank.gif" id="picDisplay">
       </div>
     </section>
