better html ul and li

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -24,21 +24,23 @@
       </div>
     </header>
     <h3>About</h3>
-     <p class='faq'>
-       Seattle has a rich music scene, with many amazingly talented artist. However we do not have equally amazing practice spaces. They are limited, inconveniently located and most of all they all are expensive. But a practice space is no more than just a room a, which is why we, team pp, created practice place. A website that offers affordable practice rooms that come in the form of everyday individual living spaces. After numerous quality checks and safety inspections, team PP, has assembled a handful of practice spaces and owners that would be happy to offer their space, for while they are away for the day. All for just a minimal fee. Find a space near you with our search engine and get jammin! </p>
-     <h5>Have a few more questions? Look below!</h5>
-    <ul id='questions1'>
-      <a class='list' href='#'>How do I reach an owner?</a>
+    <p class='faq'>
+      Seattle has a rich music scene, with many amazingly talented artist. However we do not have equally amazing practice spaces. They are limited, inconveniently located and most of all they all are expensive. But a practice space is no more than just a room a, which is why we, team pp, created practice place. A website that offers affordable practice rooms that come in the form of everyday individual living spaces. After numerous quality checks and safety inspections, team PP, has assembled a handful of practice spaces and owners that would be happy to offer their space, for while they are away for the day. All for just a minimal fee. Find a space near you with our search engine and get jammin! </p>
+    <h5>Have a few more questions? Look below!</h5>
+    <ul>
+      <li>
+        <a id='questions1' class='list' href='#'>How do I reach an owner?</a>
+      </li>
+      <li class='liList'id='answers1'>Contact info is provided in the search results. Just send a "Hello!" to the email and get the music on its way! </li>
+      <li>
+        <a id='questions2'class='list' href='#'>How much does it cost?</a>
+      </li>
+      <li class='liList'id='answers2'>Each space is different, the exact amount is provide in the details, which is determined by location, size, and math.</li>
+      <li>
+        <a id='questions3' class='list'href='#'>What other spaces will be available in the future?</a>
+      </li>
+      <li class='liList' id='answers3'>Top Pot</li>
     </ul>
-     <li class='liList'id='answers1'>Contact info is provided in the search results. Just send a "Hello!" to the email and get the music on its way! </li>
-     <ul id='questions2'>
-      <a class='list' href='#'>How much does it cost?</a>
-    </ul>
-     <li class='liList'id='answers2'>Each space is different, the exact amount is provide in the details, which is determined by location, size, and math.</li>
-     <ul id='questions3'>
-      <a class='list'href='#'>What other spaces will be available in the future?</a>
-    </ul>
-     <li class='liList' id='answers3'>Top Pot</li>
     <footer class='row'>
       <a class='two.column' href="FAQ.html">FAQ</a>
     </footer>
