better formating and add http:

--- a/public/search.html
+++ b/public/search.html
@@ -2,17 +2,16 @@
 <html>
   <head>
     <title> Practice Place </title>
-    <script src="//cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="http://cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src='app2.js'></script>
     <script src='app3.js'></script>
     <script type="text/javascript"></script>
     <meta name='description' content='band, music, practice, place, reherasl, pp,'>
-    <link href='//fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' type='text/css' href='reset.css'>
     <link rel='stylesheet' type='text/css' href='style.css'>
     <link rel='stylesheet' type='text/css' href='skeleton.css'>
-
   </head>
   <body class='container'>
     <header class= 'row'>
